-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE neighbor_observations (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    collection_run_id uuid NOT NULL,
    local_device_id uuid NOT NULL,
    local_interface_id uuid NOT NULL,
    observation_key varchar(255) NOT NULL,
    protocol varchar(10) NOT NULL DEFAULT 'lldp' CHECK (protocol = 'lldp'),
    remote_chassis_id_subtype smallint CHECK (remote_chassis_id_subtype BETWEEN 1 AND 7),
    remote_chassis_id text,
    remote_port_id_subtype smallint CHECK (remote_port_id_subtype BETWEEN 1 AND 7),
    remote_port_id text,
    remote_system_name text,
    remote_port_description text,
    remote_management_ip inet CHECK (masklen(remote_management_ip) IN (32, 128)),
    observed_at timestamptz NOT NULL,
    FOREIGN KEY (collection_run_id, local_device_id) REFERENCES collection_runs(id, device_id) ON DELETE RESTRICT,
    FOREIGN KEY (local_device_id, local_interface_id) REFERENCES device_interfaces(device_id, id) ON DELETE RESTRICT,
    UNIQUE (collection_run_id, observation_key),
    CHECK ((remote_chassis_id IS NULL) = (remote_chassis_id_subtype IS NULL)),
    CHECK ((remote_port_id IS NULL) = (remote_port_id_subtype IS NULL)),
    CHECK (remote_chassis_id IS NOT NULL OR remote_port_id IS NOT NULL OR remote_system_name IS NOT NULL OR remote_management_ip IS NOT NULL)
);
CREATE INDEX idx_neighbor_observations_local_device_id_local_interface_id ON neighbor_observations (local_device_id, local_interface_id);
CREATE INDEX idx_neighbor_observations_observed_at ON neighbor_observations (observed_at);
