-- Generated by ../rebuild_design.py. Design for a NEW database, not a migration.
CREATE TABLE collection_runs (
    id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    discovery_scan_id uuid REFERENCES discovery_scans(id) ON DELETE RESTRICT,
    device_id uuid REFERENCES devices(id) ON DELETE RESTRICT,
    target_ip inet NOT NULL CHECK (masklen(target_ip) IN (32, 128)),
    credential_profile_id uuid NOT NULL REFERENCES credential_profiles(id) ON DELETE RESTRICT,
    purpose varchar(30) NOT NULL CHECK (purpose IN ('manual_enrollment','csv_import','discovery','recollect')),
    transport varchar(20) NOT NULL CHECK (transport IN ('snmp','ssh')),
    environment varchar(20) NOT NULL CHECK (environment IN ('physical','emulated')),
    status varchar(20) NOT NULL DEFAULT 'queued' CHECK (status IN ('queued','running','succeeded','partial','failed','cancelled')),
    neighbor_status varchar(20) NOT NULL DEFAULT 'not_attempted' CHECK (neighbor_status IN ('not_attempted','succeeded','failed','unsupported')),
    initiated_by uuid,
    error_message text,
    requested_at timestamptz NOT NULL DEFAULT now(),
    started_at timestamptz,
    finished_at timestamptz,
    UNIQUE (id, device_id),
    CHECK ((purpose = 'discovery') = (discovery_scan_id IS NOT NULL)),
    CHECK (status NOT IN ('succeeded','partial') OR device_id IS NOT NULL),
    CHECK (started_at IS NULL OR started_at >= requested_at),
    CHECK (finished_at IS NULL OR finished_at >= COALESCE(started_at, requested_at)),
    CHECK ((status IN ('succeeded','partial','failed','cancelled')) = (finished_at IS NOT NULL)),
    CHECK (status NOT IN ('running','succeeded','partial') OR started_at IS NOT NULL)
);
CREATE INDEX idx_collection_runs_device_id_requested_at ON collection_runs (device_id, requested_at);
CREATE INDEX idx_collection_runs_discovery_scan_id ON collection_runs (discovery_scan_id);
CREATE INDEX idx_collection_runs_credential_profile_id ON collection_runs (credential_profile_id);
